--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       name="keywords"
       content="printer driver installation, printer setup, Windows printer, macOS printer, printer troubleshooting"
     />
-    <meta name="author" content="TechGuide Solutions" />
+    <meta name="author" content="Digit PrintHub" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -708,7 +708,7 @@
           <a href="./accessibility.html">Accessibility</a>
         </div>
         <div class="footer-bottom">
-          <p>© 2025 TechGuide Solutions. All rights reserved.</p>
+          <p>© 2025 Digit PrintHub. All rights reserved.</p>
           <p>
             This guide is provided for educational purposes. Individual results
             may vary based on specific hardware and software configurations.
