--- a/accessibility.html
+++ b/accessibility.html
@@ -1,102 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accessibility Statement - TechGuide Solutions</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Accessibility Statement - Digit PrintHub</title>
     <style>
-        body { font-family: Inter, sans-serif; max-width: 800px; margin: 0 auto; padding: 2rem; line-height: 1.6; color: #374151; }
-        h1 { color: #1f2937; border-bottom: 2px solid #2563eb; padding-bottom: 0.5rem; }
-        h2 { color: #374151; margin-top: 2rem; }
-        .commitment { background: #f0fdf4; padding: 1.5rem; border-radius: 8px; border-left: 4px solid #10b981; margin: 2rem 0; }
-        .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; margin: 1.5rem 0; }
-        .feature-card { background: #f9fafb; padding: 1rem; border-radius: 6px; }
-        .contact-accessibility { background: #eff6ff; padding: 1.5rem; border-radius: 8px; margin: 2rem 0; }
+      body {
+        font-family: Inter, sans-serif;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 2rem;
+        line-height: 1.6;
+        color: #374151;
+      }
+      h1 {
+        color: #1f2937;
+        border-bottom: 2px solid #2563eb;
+        padding-bottom: 0.5rem;
+      }
+      h2 {
+        color: #374151;
+        margin-top: 2rem;
+      }
+      .commitment {
+        background: #f0fdf4;
+        padding: 1.5rem;
+        border-radius: 8px;
+        border-left: 4px solid #10b981;
+        margin: 2rem 0;
+      }
+      .features-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 1rem;
+        margin: 1.5rem 0;
+      }
+      .feature-card {
+        background: #f9fafb;
+        padding: 1rem;
+        border-radius: 6px;
+      }
+      .contact-accessibility {
+        background: #eff6ff;
+        padding: 1.5rem;
+        border-radius: 8px;
+        margin: 2rem 0;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Accessibility Statement</h1>
     <p><strong>Effective Date:</strong> June 14, 2025</p>
 
     <div class="commitment">
-        <h2>Our Commitment</h2>
-        <p>TechGuide Solutions is committed to ensuring digital accessibility for people with disabilities. We are continually improving the user experience for everyone and applying the relevant accessibility standards.</p>
+      <h2>Our Commitment</h2>
+      <p>
+        Digit PrintHub is committed to ensuring digital accessibility for people
+        with disabilities. We are continually improving the user experience for
+        everyone and applying the relevant accessibility standards.
+      </p>
     </div>
 
     <h2>Accessibility Standards</h2>
-    <p>We strive to conform to the Web Content Accessibility Guidelines (WCAG) 2.1 Level AA standards. These guidelines help make web content more accessible to people with disabilities.</p>
+    <p>
+      We strive to conform to the Web Content Accessibility Guidelines (WCAG)
+      2.1 Level AA standards. These guidelines help make web content more
+      accessible to people with disabilities.
+    </p>
 
     <h2>Accessibility Features</h2>
     <div class="features-grid">
-        <div class="feature-card">
-            <h3>🎨 Visual Design</h3>
-            <ul>
-                <li>High contrast color schemes</li>
-                <li>Scalable text and UI elements</li>
-                <li>Clear visual hierarchy</li>
-            </ul>
-        </div>
-        <div class="feature-card">
-            <h3>⌨️ Keyboard Navigation</h3>
-            <ul>
-                <li>Full keyboard accessibility</li>
-                <li>Logical tab order</li>
-                <li>Visible focus indicators</li>
-            </ul>
-        </div>
-        <div class="feature-card">
-            <h3>📱 Responsive Design</h3>
-            <ul>
-                <li>Mobile-friendly interface</li>
-                <li>Flexible layouts</li>
-                <li>Touch-friendly controls</li>
-            </ul>
-        </div>
-        <div class="feature-card">
-            <h3>🔊 Screen Reader Support</h3>
-            <ul>
-                <li>Semantic HTML structure</li>
-                <li>Alt text for images</li>
-                <li>Descriptive link text</li>
-            </ul>
-        </div>
+      <div class="feature-card">
+        <h3>🎨 Visual Design</h3>
+        <ul>
+          <li>High contrast color schemes</li>
+          <li>Scalable text and UI elements</li>
+          <li>Clear visual hierarchy</li>
+        </ul>
+      </div>
+      <div class="feature-card">
+        <h3>⌨️ Keyboard Navigation</h3>
+        <ul>
+          <li>Full keyboard accessibility</li>
+          <li>Logical tab order</li>
+          <li>Visible focus indicators</li>
+        </ul>
+      </div>
+      <div class="feature-card">
+        <h3>📱 Responsive Design</h3>
+        <ul>
+          <li>Mobile-friendly interface</li>
+          <li>Flexible layouts</li>
+          <li>Touch-friendly controls</li>
+        </ul>
+      </div>
+      <div class="feature-card">
+        <h3>🔊 Screen Reader Support</h3>
+        <ul>
+          <li>Semantic HTML structure</li>
+          <li>Alt text for images</li>
+          <li>Descriptive link text</li>
+        </ul>
+      </div>
     </div>
 
     <h2>Browser and Assistive Technology Support</h2>
     <p>Our website is designed to work with:</p>
     <ul>
-        <li>Modern web browsers (Chrome, Firefox, Safari, Edge)</li>
-        <li>Screen readers (NVDA, JAWS, VoiceOver)</li>
-        <li>Keyboard-only navigation</li>
-        <li>Voice control software</li>
-        <li>Browser zoom up to 200%</li>
+      <li>Modern web browsers (Chrome, Firefox, Safari, Edge)</li>
+      <li>Screen readers (NVDA, JAWS, VoiceOver)</li>
+      <li>Keyboard-only navigation</li>
+      <li>Voice control software</li>
+      <li>Browser zoom up to 200%</li>
     </ul>
 
     <h2>Known Limitations</h2>
-    <p>We are aware of some accessibility limitations and are working to address them:</p>
+    <p>
+      We are aware of some accessibility limitations and are working to address
+      them:
+    </p>
     <ul>
-        <li>Some third-party embedded content may not be fully accessible</li>
-        <li>Complex interactive elements are being improved</li>
-        <li>PDF documents are being updated for better accessibility</li>
+      <li>Some third-party embedded content may not be fully accessible</li>
+      <li>Complex interactive elements are being improved</li>
+      <li>PDF documents are being updated for better accessibility</li>
     </ul>
 
     <div class="contact-accessibility">
-        <h2>Feedback and Contact</h2>
-        <p>We welcome your feedback on the accessibility of TechGuide Solutions. If you encounter accessibility barriers or have suggestions for improvement:</p>
-        <p><strong>Email:</strong> accessibility@techguide-solutions.com<br>
-        <strong>Subject Line:</strong> Accessibility Feedback<br>
-        <strong>Response Time:</strong> We aim to respond within 5 business days</p>
+      <h2>Feedback and Contact</h2>
+      <p>
+        We welcome your feedback on the accessibility of Digit PrintHub. If you
+        encounter accessibility barriers or have suggestions for improvement:
+      </p>
+      <p>
+        <strong>Email:</strong> accessibility@techguide-solutions.com<br />
+        <strong>Subject Line:</strong> Accessibility Feedback<br />
+        <strong>Response Time:</strong> We aim to respond within 5 business days
+      </p>
     </div>
 
     <h2>Ongoing Efforts</h2>
     <p>We regularly:</p>
     <ul>
-        <li>Conduct accessibility audits</li>
-        <li>Test with assistive technologies</li>
-        <li>Train our team on accessibility best practices</li>
-        <li>Monitor and improve our accessibility standards</li>
+      <li>Conduct accessibility audits</li>
+      <li>Test with assistive technologies</li>
+      <li>Train our team on accessibility best practices</li>
+      <li>Monitor and improve our accessibility standards</li>
     </ul>
 
-    <p><em>This accessibility statement was last reviewed and updated on June 14, 2025.</em></p>
-</body>
+    <p>
+      <em
+        >This accessibility statement was last reviewed and updated on June 14,
+        2025.</em
+      >
+    </p>
+  </body>
 </html>
