--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -1,50 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - TechGuide Solutions</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Terms of Service - Digit PrintHub</title>
     <style>
-        body { font-family: Inter, sans-serif; max-width: 800px; margin: 0 auto; padding: 2rem; line-height: 1.6; color: #374151; }
-        h1 { color: #1f2937; border-bottom: 2px solid #2563eb; padding-bottom: 0.5rem; }
-        h2 { color: #374151; margin-top: 2rem; }
-        .last-updated { background: #f3f4f6; padding: 1rem; border-radius: 6px; margin-bottom: 2rem; }
-        .important { background: #fef3c7; padding: 1rem; border-radius: 6px; border-left: 4px solid #f59e0b; margin: 1rem 0; }
+      body {
+        font-family: Inter, sans-serif;
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 2rem;
+        line-height: 1.6;
+        color: #374151;
+      }
+      h1 {
+        color: #1f2937;
+        border-bottom: 2px solid #2563eb;
+        padding-bottom: 0.5rem;
+      }
+      h2 {
+        color: #374151;
+        margin-top: 2rem;
+      }
+      .last-updated {
+        background: #f3f4f6;
+        padding: 1rem;
+        border-radius: 6px;
+        margin-bottom: 2rem;
+      }
+      .important {
+        background: #fef3c7;
+        padding: 1rem;
+        border-radius: 6px;
+        border-left: 4px solid #f59e0b;
+        margin: 1rem 0;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Terms of Service</h1>
-    <div class="last-updated">
-        <strong>Last Updated:</strong> June 14, 2025
-    </div>
+    <div class="last-updated"><strong>Last Updated:</strong> June 14, 2025</div>
 
     <h2>Acceptance of Terms</h2>
-    <p>By accessing and using TechGuide Solutions website and services, you accept and agree to be bound by the terms and provision of this agreement.</p>
+    <p>
+      By accessing and using Digit PrintHub website and services, you accept and
+      agree to be bound by the terms and provision of this agreement.
+    </p>
 
     <h2>Use License</h2>
-    <p>Permission is granted to temporarily download one copy of the materials on TechGuide Solutions website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title.</p>
+    <p>
+      Permission is granted to temporarily download one copy of the materials on
+      Digit PrintHub website for personal, non-commercial transitory viewing
+      only. This is the grant of a license, not a transfer of title.
+    </p>
 
     <h2>Disclaimer</h2>
     <div class="important">
-        <strong>Important:</strong> The materials on TechGuide Solutions website are provided on an 'as is' basis. TechGuide Solutions makes no warranties, expressed or implied, and hereby disclaims all other warranties including implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property.
+      <strong>Important:</strong> The materials on Digit PrintHub website are
+      provided on an 'as is' basis. Digit PrintHub makes no warranties,
+      expressed or implied, and hereby disclaims all other warranties including
+      implied warranties or conditions of merchantability, fitness for a
+      particular purpose, or non-infringement of intellectual property.
     </div>
 
     <h2>Limitations</h2>
-    <p>In no event shall TechGuide Solutions or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on TechGuide Solutions website.</p>
+    <p>
+      In no event shall Digit PrintHub or its suppliers be liable for any
+      damages (including, without limitation, damages for loss of data or
+      profit, or due to business interruption) arising out of the use or
+      inability to use the materials on Digit PrintHub website.
+    </p>
 
     <h2>User Conduct</h2>
     <p>You agree not to use the service to:</p>
     <ul>
-        <li>Upload or transmit harmful, offensive, or illegal content</li>
-        <li>Violate any applicable laws or regulations</li>
-        <li>Infringe on intellectual property rights</li>
-        <li>Attempt to gain unauthorized access to our systems</li>
+      <li>Upload or transmit harmful, offensive, or illegal content</li>
+      <li>Violate any applicable laws or regulations</li>
+      <li>Infringe on intellectual property rights</li>
+      <li>Attempt to gain unauthorized access to our systems</li>
     </ul>
 
     <h2>Modifications</h2>
-    <p>TechGuide Solutions may revise these terms of service at any time without notice. By using this website, you are agreeing to be bound by the then current version of these terms of service.</p>
+    <p>
+      Digit PrintHub may revise these terms of service at any time without
+      notice. By using this website, you are agreeing to be bound by the then
+      current version of these terms of service.
+    </p>
 
     <h2>Contact Information</h2>
-    <p>Questions about the Terms of Service should be sent to us at: legal@techguide-solutions.com</p>
-</body>
+    <p>
+      Questions about the Terms of Service should be sent to us at:
+      legal@techguide-solutions.com
+    </p>
+  </body>
 </html>
